AC_INIT([dnet], [2.5.1], [zbr@ioremap.net])
AM_INIT_AUTOMAKE(1.9)

AC_GNU_SOURCE
AC_CONFIG_HEADERS(config/config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_LIBTOOL

AC_LANG([C])
AM_MAINTAINER_MODE

ACX_PTHREAD
AC_SYS_LARGEFILE

AX_CHECK_OPENSSL
AX_PREFIX_CONFIG_H(config/acsetup.h)
AX_CREATE_STDINT_H(include/dnet/typedefs.h)

for i in -W -Wall -Wextra; do
	AX_CHECK_COMPILER_FLAGS([$i], [CFLAGS="$CFLAGS $i"], [])
done

AC_C_BIGENDIAN_CROSS
AC_CHECK_LARGEFILE
AC_ID_SIZE
AC_CHECK_SENDFILE
AC_CHECK_LIBEVENT
AC_CHECK_BDB
AC_CHECK_ATOMIC
AC_CHECK_TOKYOCABINET
AC_CHECK_STAT

AC_CONFIG_FILES([Makefile include/Makefile include/dnet/Makefile
		 library/Makefile example/Makefile tests/Makefile
		 doc/Makefile])

AC_OUTPUT
