AC_INIT([elliptics], [2.14.1], [zbr@ioremap.net])
AM_INIT_AUTOMAKE(1.9)

AC_GNU_SOURCE
AC_CONFIG_HEADERS(config/config.h)

AC_CONFIG_MACRO_DIR([config])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_LIBTOOL

AC_LANG([C])
AM_MAINTAINER_MODE

ACX_PTHREAD
AC_SYS_LARGEFILE

AX_PREFIX_CONFIG_H(config/acsetup.h)
AX_CREATE_STDINT_H(include/elliptics/typedefs.h)

AX_SET_VERSION_INFO

for i in -W -Wall -Wextra -fstack-protector-all -fno-strict-aliasing; do
	AX_CHECK_COMPILER_FLAGS([$i], [CFLAGS="$CFLAGS $i"; CXXFLAGS="$CXXFLAGS $i"], [])
done

AC_C_BIGENDIAN_CROSS
AC_CHECK_LARGEFILE
AC_ID_SIZE
AC_CHECK_SENDFILE
AC_CHECK_IOPRIO
AC_CHECK_ATOMIC
AC_CHECK_STAT
AC_CHECK_EBLOB

AX_BOOST_BASE
AX_BOOST_SYSTEM
AX_BOOST_PROGRAM_OPTIONS
AX_BOOST_FILESYSTEM
AX_BOOST_IOSTREAMS
AX_BOOST_THREAD
AX_BOOST_PYTHON

AC_CHECK_SMACK

AC_CHECK_COCAINE

AC_CHECK_HEADER(dlfcn.h)
AC_CHECK_LIB(dl,dlopen)

AC_CONFIG_FILES([Makefile include/Makefile include/elliptics/Makefile
		 library/Makefile example/Makefile
		 doc/Makefile debian/Makefile
		 bindings/Makefile bindings/cpp/Makefile
		 bindings/python/Makefile
		 srw/Makefile
		 ])

AC_OUTPUT
