SUBDIRS = src

EXTRA_DIST = scripts/pohmelfs_data_unlink.py \
	     scripts/pohmelfs_hardlink.py \
	     scripts/pohmelfs_inode_info_insert.py \
	     scripts/pohmelfs_lookup.py \
	     scripts/pohmelfs_readdir.py \
	     scripts/pohmelfs_read_latest_groups.py \
	     scripts/pohmelfs_rename.py \
	     scripts/pohmelfs_unlink.py \
	     scripts/python.init
